Add new method, fix some errors and clean configuration