@@ -12,15 +12,20 @@
 	<artifactId>petcare</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>petcare</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Petcare Software</description>
 
 	 <properties>
 	 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <junit-jupiter.version>5.3.2</junit-jupiter.version>
+
+		<java.version>11</java.version>
+
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+        
         <mockito.version>2.24.0</mockito.version>
 		<mariadb-java-client.version>2.5.2</mariadb-java-client.version>
+		<junit-version>5.6.2</junit-version>
     </properties>
 
 	<dependencies>
@@ -50,6 +55,24 @@
 			<version>${mockito.version}</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit-version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit-version}</version>
+			<scope>test</scope>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
@@ -62,7 +85,23 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.22.0</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
 			</plugin>
 
 		</plugins>
